# fix_keynote

./: .gitignore  CHANGELOG.md  FixKeynote.spec  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: release.yml
src/fix_keynote/: cli.py  rebuild_template.applescript
