[project]
name = "fix-keynote"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pypdf2>=3.0.1",
]

[project.scripts]
fix_keynote = "fix_keynote.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
