[project]
name = "fix-keynote"
version = "0.1.0"
description = "A tool to recover and reconstruct corrupted Apple Keynote presentation files."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pypdf2>=3.0.1",
]

[project.scripts]
fix_keynote = "fix_keynote.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
build = [
    "pyinstaller>=6.19.0",
]
