[project]
name = "fix-keynote"
version = "0.3.0"
description = "A tool to recover and reconstruct corrupted Apple Keynote presentation files."
readme = "README.md"
requires-python = ">=3.13"
authors = [
    { name = "Matthieu Boileau" }
]
license = { text = "MIT" }
keywords = ["keynote", "macos", "recovery", "applescript"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: MacOS X",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Utilities",
]
dependencies = [
    "pypdf2>=3.0.1",
]

[project.urls]
Homepage = "https://github.com/boileaum/fix_keynote"
Repository = "https://github.com/boileaum/fix_keynote"
Issues = "https://github.com/boileaum/fix_keynote/issues"

[project.scripts]
fix_keynote = "fix_keynote.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
build = [
    "pyinstaller>=6.19.0",
]
